remove unnecessary dependencies
Signed-off-by: ijnek <kenjibrameld@gmail.com>

--- a/rcss3d_agent_msgs/CMakeLists.txt
+++ b/rcss3d_agent_msgs/CMakeLists.txt
@@ -19,8 +19,6 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(geometry_msgs REQUIRED)
 
 set(msg_files
   "msg/Accelerometer.msg"
@@ -46,7 +44,7 @@ set(msg_files
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
-  DEPENDENCIES builtin_interfaces std_msgs geometry_msgs
+  DEPENDENCIES builtin_interfaces
 )
 
 ament_package()
