--- a/rcss3d_agent_basic/CMakeLists.txt
+++ b/rcss3d_agent_basic/CMakeLists.txt
@@ -10,26 +10,35 @@ find_package(ament_cmake REQUIRED)
 find_package(rcss3d_agent REQUIRED)
 find_package(rclcpp_components REQUIRED)
 
-# Build
-add_library(rcss3d_agent_basic_node SHARED
-  src/rcss3d_agent_basic_node.cpp)
-target_include_directories(rcss3d_agent_basic_node PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-ament_target_dependencies(rcss3d_agent_basic_node
+set(THIS_PACKAGE_INCLUDE_DEPENDS
   rcss3d_agent
   rclcpp_components)
-rclcpp_components_register_node(rcss3d_agent_basic_node
+
+# Build
+add_library(${PROJECT_NAME}_node SHARED
+  src/rcss3d_agent_basic_node.cpp)
+target_include_directories(${PROJECT_NAME}_node PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+
+rclcpp_components_register_node(${PROJECT_NAME}_node
   PLUGIN "rcss3d_agent_basic::Rcss3dAgentBasicNode"
-  EXECUTABLE rcss3d_agent_basic)
+  EXECUTABLE ${PROJECT_NAME})
+
+ament_target_dependencies(${PROJECT_NAME}_node ${THIS_PACKAGE_INCLUDE_DEPENDS})
+
+ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
+ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
 
 # Install
+install(DIRECTORY include/ DESTINATION include)
 install(
-  TARGETS rcss3d_agent_basic_node
+  TARGETS ${PROJECT_NAME}_node
   EXPORT export_${PROJECT_NAME}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin)
+  RUNTIME DESTINATION bin
+  INCLUDES DESTINATION include)  
 
 # Test
 if(BUILD_TESTING)
