--- a/rcss3d_agent_basic/CMakeLists.txt
+++ b/rcss3d_agent_basic/CMakeLists.txt
@@ -31,14 +31,16 @@ ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
 ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
 
 # Install
-install(DIRECTORY include/ DESTINATION include)
+install(
+  DIRECTORY include/
+  DESTINATION include)
 install(
   TARGETS ${PROJECT_NAME}_node
   EXPORT export_${PROJECT_NAME}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
-  INCLUDES DESTINATION include)  
+  INCLUDES DESTINATION include)
 
 # Test
 if(BUILD_TESTING)
