add effector msg to allow synchronize effector to be used
Signed-off-by: ijnek <kenjibrameld@gmail.com>

--- a/rcss3d_agent_msgs/CMakeLists.txt
+++ b/rcss3d_agent_msgs/CMakeLists.txt
@@ -25,6 +25,7 @@ set(msg_files
   "msg/AgentState.msg"
   "msg/Ball.msg"
   "msg/Beam.msg"
+  "msg/Effector.msg"
   "msg/FieldLine.msg"
   "msg/Flag.msg"
   "msg/ForceResistance.msg"
