--- a/.github/workflows/build_and_test_rolling.yaml
+++ b/.github/workflows/build_and_test_rolling.yaml
@@ -27,6 +27,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: ros-tooling/setup-ros@v0.3
+        with:
+          use-ros2-testing: true
       - uses: ros-tooling/action-ros-ci@v0.2
         with:
           target-ros2-distro: rolling
