implement rcss3d-agent-soccer package
Signed-off-by: Kenji Brameld <kenjibrameld@gmail.com>

--- a/rcss3d_agent_soccer/CMakeLists.txt
+++ b/rcss3d_agent_soccer/CMakeLists.txt
@@ -7,20 +7,44 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rcss3d_agent_msgs REQUIRED)
+find_package(soccer_vision_3d_msgs REQUIRED)
 
+set(THIS_PACKAGE_INCLUDE_DEPENDS
+  rcss3d_agent_msgs
+  soccer_vision_3d_msgs)
+
+# Build
+add_library(${PROJECT_NAME} SHARED
+  src/sim_to_soccer_vision_3d.cpp)
+target_include_directories(${PROJECT_NAME} PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+
+ament_target_dependencies(${PROJECT_NAME} ${THIS_PACKAGE_INCLUDE_DEPENDS})
+ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
+ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
+
+# Install
+install(
+  DIRECTORY include/
+  DESTINATION include)
+install(
+  TARGETS ${PROJECT_NAME}
+  EXPORT export_${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+  INCLUDES DESTINATION include)
+
+# Test
 if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+  add_subdirectory(test)
+
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+# Package
 ament_package()
