--- a/rcss3d_agent_soccer/package.xml
+++ b/rcss3d_agent_soccer/package.xml
@@ -2,12 +2,15 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rcss3d_agent_soccer</name>
-  <version>0.0.0</version>
+  <version>0.3.1</version>
   <description>Conversions from rcss3d_agent_msgs to soccer_interfaces</description>
   <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rcss3d_agent_msgs</depend>
+  <depend>soccer_vision_3d_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
