--- a/rcss3d_agent_msgs_to_soccer_interfaces/package.xml
+++ b/rcss3d_agent_msgs_to_soccer_interfaces/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>rcss3d_agent_soccer</name>
+  <name>rcss3d_agent_msgs_to_soccer_interfaces</name>
   <version>0.3.1</version>
-  <description>Conversions from rcss3d_agent_msgs to soccer_interfaces</description>
+  <description>Library with methods that convert rcss3d_agent_msgs to soccer_interfaces</description>
   <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
   <license>Apache License 2.0</license>
 
